--- a/components/Center/Center.module.css
+++ b/components/Center/Center.module.css
@@ -37,7 +37,6 @@
     left: -20px;
     bottom: 8px;
     border-radius: 100%;
-
 }
 
 .heading small:nth-child(2)::after {
@@ -48,12 +47,13 @@
     position: absolute;
     left: -27px;
     bottom: -10px;
+    border-radius: 100px;
 }
 
 .main {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
 }
 
 .main_heading {
@@ -75,7 +75,8 @@
 
 .images {
     display: flex;
-    gap: 10px;
+    gap: 15px;
+    align-items: center;
 }
 
 .image_container {
@@ -86,7 +87,7 @@
 
 .cards {
     display: flex;
-    gap: 15px;
+    gap: 25px;
 }
 
 .cards button {
@@ -128,7 +129,8 @@
 .divider {
     background-color: #ACACAC80;
     height: 2px;
-    margin: 5px 0;
+    margin: 40px 0 25px 0;
+    border-radius: 100px;
 }
 
 .footer {
