--- a/components/Input/Input.module.css
+++ b/components/Input/Input.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    width: 40%;
+    flex: 1;
 }
 
 .label {
@@ -18,6 +18,7 @@
     letter-spacing: 1px;
     padding: 5px 0;
     transition: 0.3s linear;
+    background-color: transparent;
 }
 
 .input:focus {
