--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -2,6 +2,9 @@
     width: 100%;
     padding: 5px 10px;
     box-shadow: 0px 4px 11px 0px #00000024;
+    /* Don't know if navbar has to be fixed or not */
+    /* position: sticky;
+    top: 0; */
 }
 
 .inner {
