--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -3,8 +3,10 @@
     padding: 5px 10px;
     box-shadow: 0px 4px 11px 0px #00000024;
     /* Don't know if navbar has to be fixed or not */
-    /* position: sticky;
-    top: 0; */
+    position: sticky;
+    top: 0;
+    z-index: 50;
+    background-color: #FFFDFD;
 }
 
 .inner {
@@ -79,4 +81,52 @@
     font-size: 18px;
     background: linear-gradient(112.33deg, #FC4D6D 23.89%, #FDA02F 94.22%);
     cursor: pointer;
+}
+
+
+
+/* Media */
+
+@media screen and (max-width: 1022px) {
+    .search {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 490px) {
+    .inner_small {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 490px) {
+    .inner {
+        display: none;
+    }
+
+    .inner_small {
+        max-width: 1440px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 0 auto;
+        gap: 15px;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .icon_small svg {
+        height: 25px;
+        width: 25px;
+    }
+
+    .image {
+        width: 150px;
+        height: 40px;
+    }
+
+    .button{
+        font-size: 12px;
+        padding: 6px 16px;
+    }
 }
