--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,3 +13,12 @@
     margin: 0 auto;
     gap: 20px;
 }
+
+
+/* Media */
+
+@media screen and (max-width: 425px) {
+    .container{
+        padding: 6px;
+    }
+}
