--- a/components/Sidebar/Sidebar.module.css
+++ b/components/Sidebar/Sidebar.module.css
@@ -3,9 +3,8 @@
     background: linear-gradient(90deg, #F5F4F4 50.89%, #FFFDFD 98.22%);
     flex-direction: column;
     gap: 10px;
-    min-width: 400px;
-    width: 400px;
-    flex-shrink: 1;
+    min-width: 300px;
+    width: 30%;
     padding: 30px 0 30px 30px;
 }
 
@@ -22,6 +21,12 @@
     font-size: 10px;
     color: #4863ED;
     cursor: pointer;
+}
+
+.main_container {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 
 .main {
@@ -188,4 +193,44 @@
     padding: 40px 15px;
     color: #6B6B6B;
     font-size: 14px;
+}
+
+
+/* Media */
+
+@media screen and (max-width: 1080px) {
+    .container {
+        width: 100%;
+        background: #FFFDFD;
+        padding: 30px;
+    }
+
+    .main_container {
+        border-radius: 18px;
+        box-shadow: -3px 4px 11px 0px #0000002E;
+        padding: 10px 30px;
+    }
+
+    .heading {
+        border: none;
+    }
+
+
+    .heading small {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .container {
+        width: 100%;
+        background: #FFFDFD;
+        padding: 15px;
+    }
+}
+
+@media screen and (max-width: 490px) {
+    .container {
+        padding: 0;
+    }
 }
