--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,14 +2,14 @@
     max-width: 1540px;
     display: block;
     margin: 0 auto;
-    padding: 0 15px;
+    /* padding: 0 15px; */
 }
 
 .main_container {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap-reverse;
-    max-width: 1440px;
+    max-width: 100%;
     margin: 0 auto;
     gap: 20px;
 }
@@ -17,8 +17,8 @@
 
 /* Media */
 
-@media screen and (max-width: 425px) {
+/* @media screen and (max-width: 425px) {
     .container{
         padding: 6px;
     }
-}
+} */
