--- a/components/Sidebar/Sidebar.module.css
+++ b/components/Sidebar/Sidebar.module.css
@@ -1,11 +1,11 @@
 .container {
     display: flex;
-    background: linear-gradient(90deg, #F5F4F4 50.89%, #FFFDFD 98.22%);
+    background-color: #F5F4F4;
     flex-direction: column;
     gap: 10px;
     min-width: 300px;
     width: 30%;
-    padding: 30px 0 30px 30px;
+    padding: 30px 30px 30px 30px;
 }
 
 .heading {
@@ -65,6 +65,8 @@
 .name_details p {
     color: #665F60;
     font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
 }
 
 .country_image {
